# Teaching

./: .gitignore
c++11/: CMakeLists.txt  CMakePresets.json
c++11/ParameterPackIndexing/: CMakeLists.txt  GetNth.cpp
c++14/: CMakePresets.json
c++14/ParameterPackIndexing/: GetNth.cpp
c++17/: .clang-tidy  CMakePresets.json
c++17/AbstractBasePimpl/: CMakeLists.txt  Label.cpp  Label.hpp  LabelImplBase.hpp  LabelOCHImpl.cpp  LabelOCHImpl.hpp  LabelOTNImpl.cpp  LabelOTNImpl.hpp  Main.cpp
c++17/PlainAbstractBase/: CMakeLists.txt  LabelIF.hpp  LabelOCHImpl.hpp  LabelOTNImpl.hpp  Main.cpp
c++17/TypeErasure/: CMakeLists.txt  Label.hpp  LabelConcept.hpp  LabelImpl.cpp  LabelImpl.hpp  LabelModel.hpp  LabelTypes.hpp  Main.cpp  NotOfTypeLabelConcept.hpp
c++17/UsingVariant/: Label.cpp  Label.hpp  LabelOCH.cpp  LabelOCH.hpp  LabelOTN.cpp
c++17/linear-algebra/: ExpressionTemplate.cpp  ExpressionTemplate2ndVersion.cpp  ExpressionTemplate3rdVersion.cpp  ExpressionTemplateAsRangeAdaptors.cpp  ExpressionTemplateAsRangeAdaptors.save.cpp  ExpressionTemplateAsRangeAdaptorsMinimal.cpp
c++17/polymorphism/: CMakeLists.txt  Inheritance-c++17.cpp
c++20/: .clang-tidy  CMakeLists.txt  CMakePresets.json
c++20/AbstractBasePimpl/: Label.cpp  Label.hpp  LabelImplBase.hpp  LabelOCHImpl.cpp  LabelOTNImpl.cpp  LabelOTNImpl.hpp  LabelTypes.hpp  Main.cpp
c++20/ControlChannelFSM/: CMakeLists.txt  ControlChannelFSM.cpp  ControlChannelFSM.hpp  Main.cpp
c++20/ParameterPackIndexing/: GetNth.cpp
c++20/ParameterPackIndexingCheckGenericLambdaFeature/: CMakeLists.txt  GetNth.cpp
c++20/PlainAbstractBase/: LabelIF.hpp  LabelOCHImpl.cpp  LabelOTNImpl.cpp  LabelOTNImpl.hpp  Main.cpp
c++20/TypeErasure/: Label.hpp  LabelConcept.hpp  LabelImpl.cpp  LabelModel.hpp  LabelOCH.hpp  LabelOTN.hpp  Main.cpp  MsgBuffer.hpp
c++20/UsingVariant/: CMakeLists.txt  Label.cpp  LabelOCH.cpp  LabelOCH.hpp  LabelOTN.cpp  LabelOTN.hpp  Main.cpp
c++23/: CMakeLists.txt  CMakePresets.json
c++23/ParameterPackIndexing/: GetNth.cpp
c++23/linear-algebra/: CMakeLists.txt  Main.cpp
c++26/: .clang-tidy  CMakeLists.txt  CMakePresets.json
c++26/ParameterPackIndexing/: GetNth.cpp
c++98/: CMakeLists.txt  CMakePresets.json
c++98/AbstractBasePimpl/: Label.cpp  Label.hpp  LabelImplBase.hpp  LabelOCHImpl.cpp  LabelOCHImpl.hpp  LabelOTNImpl.cpp  LabelOTNImpl.hpp  LabelTypes.hpp  Main.cpp
c++98/PlainAbstractBase/: LabelIF.hpp  LabelOCHImpl.cpp  LabelOCHImpl.hpp  LabelOTNImpl.cpp  LabelOTNImpl.hpp  LabelTypes.hpp  Main.cpp
c++98/polymorphism/: Inheritance-c++98.cpp
